K8S/discount-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discount-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discountservice
  template:
    metadata:
      labels:
        app: discountservice
    spec:
      containers:
        - name: discountservice
          image: tonykr/discountservice:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: discount-clusterip-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: discountservice
  ports:
  - name: discountservice
    protocol: TCP
    port: 80
    targetPort: 80
