K8S/email-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
        - name: emailservice
          image: tonykr/emailservice:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: email-clusterip-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
  - name: emailservice
    protocol: TCP
    port: 80
    targetPort: 80
