K8S/mssql-user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssqluser
  template:
    metadata:
      labels:
        app: mssqluser
    spec:
      containers:
        - name: mssqluser
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/userdata
            name: mssqluserdb
      volumes:
      - name: mssqluserdb
        persistentVolumeClaim:
          claimName: pvc-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mssql-user-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssqluser
  ports:
  - name: mssqluser
    protocol: TCP
    port: 1433
    targetPort: 1433

---
apiVersion: v1
kind: Service
metadata:
  name: mssql-user-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssqluser
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
