K8S/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
        - name: paymentservice
          image: tonykr/paymentservice:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-clusterip-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
  - name: paymentservice
    protocol: TCP
    port: 80
    targetPort: 80
