K8S/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: tonykr/userservice:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-clusterip-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
  - name: userservice
    protocol: TCP
    port: 80
    targetPort: 80
